# maplab-note

./: .gedit.swp  .gitignore  README.md
algorithms/ceres-error-terms/: CMakeLists.txt
algorithms/ceres-error-terms/include/ceres-error-terms/: common.h  inertial-error-term.h  problem-information.h  residual-information.h  visual-error-term-base.h  visual-error-term-factory-inl.h  visual-error-term-inl.h  visual-error-term.h
algorithms/ceres-error-terms/include/ceres-error-terms/parameterization/: pose-param-jpl.h  quaternion-param-jpl.h
algorithms/ceres-error-terms/src/: ceres-signal-handler.cc  inertial-error-term.cc  problem-information.cc
algorithms/ceres-error-terms/src/parameterization/: quaternion-param-jpl.cc
algorithms/feature-tracking/: CMakeLists.txt
algorithms/feature-tracking/src/: feature-detection-extraction.cc  feature-tracking-types.cc  vo-feature-tracking-pipeline.cc
algorithms/imu-integrator-rk4/: CMakeLists.txt
algorithms/imu-integrator-rk4/include/imu-integrator/: imu-integrator-eigen-inl.h  imu-integrator-inl.h
algorithms/landmark-triangulation/src/: landmark-triangulation.cc
algorithms/loopclosure/loop-closure-handler/: CMakeLists.txt
algorithms/loopclosure/loop-closure-handler/include/loop-closure-handler/: loop-detector-node.h
algorithms/loopclosure/loop-closure-handler/src/: inlier-index-with-reprojection-error.cc  loop-closure-handler.cc  loop-detector-node.cc
algorithms/loopclosure/matching-based-loopclosure/: CMakeLists.txt
algorithms/loopclosure/matching-based-loopclosure/include/matching-based-loopclosure/: detector-settings.h  helpers.h  inverted-multi-index-interface.h  matching-based-engine-inl.h  matching-based-engine.h  scoring.h
algorithms/loopclosure/matching-based-loopclosure/src/: detector-settings.cc  matching-based-engine.cc
algorithms/map-optimization/: CMakeLists.txt
algorithms/map-optimization/include/map-optimization/: callbacks.h  mission-cluster-gauge-fixes.h  optimization-problem.h  optimization-state-buffer.h  optimization-state-fixing.h  solver-options.h  vi-map-optimizer.h
algorithms/map-optimization/src/: optimization-problem.cc  optimization-state-buffer.cc  optimization-terms-addition.cc  outlier-rejection-solver.cc  solver.cc  vi-map-optimizer.cc  vi-map-relaxation.cc  vi-optimization-builder.cc
algorithms/map-sparsification/src/: keyframe-pruning.cc
algorithms/online_map_builders/: CMakeLists.txt
algorithms/online_map_builders/src/: stream-map-builder.cc
algorithms/vi-map-helpers/: CMakeLists.txt
algorithms/vi-map-helpers/include/vi-map-helpers/: mission-clustering-coobservation.h  vi-map-manipulation.h  vi-map-queries.h
algorithms/vi-map-helpers/src/: mission-clustering-coobservation.cc  vi-map-landmark-quality-evaluation.cc  vi-map-manipulation.cc  vi-map-queries.cc
applications/rovioli/: CMakeLists.txt
applications/rovioli/app/: rovioli-app.cc
applications/rovioli/include/rovioli/: data-publisher-flow.h  datasource-flow.h  datasource.h  feature-tracking-flow.h  feature-tracking.h  flow-topics.h  imu-camera-synchronizer-flow.h  localizer-flow.h  replace-pose-flow.h  ros-helpers.h  rovio-estimate.h  synced-nframe-throttler-flow.h
applications/rovioli/scripts/tutorials/: tutorial_euroc_live  tutorial_euroc_localization
applications/rovioli/share/: imu-adis16488.yaml  ncamera-euroc.yaml  说明.txt
applications/rovioli/share/未命名文件夹/: imu-adis16488.yaml
applications/rovioli/src/: data-publisher-flow.cc  datasource-factory.cc  datasource-rostopic.cc  feature-tracking.cc  imu-camera-synchronizer.cc  localizer.cc  map-builder-flow.cc  rovio-factory.cc  rovio-flow.cc  rovioli-node.cc  synced-nframe-throttler.cc  vio-update-builder.cc
aslam_cv2/aslam_cv_cameras/: CMakeLists.txt
aslam_cv2/aslam_cv_cameras/include/aslam/cameras/: camera-pinhole-inl.h  camera.h  ncamera.h
aslam_cv2/aslam_cv_cameras/include/aslam/cameras/yaml/: ncamera-yaml-serialization.h
aslam_cv2/aslam_cv_cameras/src/: camera-pinhole.cc  camera-yaml-serialization.cc  camera.cc  distortion-fisheye.cc  distortion-radtan.cc  ncamera-yaml-serialization.cc  ncamera.cc
aslam_cv2/aslam_cv_frames/: CMakeLists.txt
aslam_cv2/aslam_cv_frames/include/aslam/frames/: visual-frame.h  visual-nframe.h
aslam_cv2/aslam_cv_frames/src/: visual-frame.cc  visual-nframe.cc
aslam_cv2/aslam_cv_geometric_vision/: CMakeLists.txt
aslam_cv2/aslam_cv_geometric_vision/src/: match-outlier-rejection-twopt.cc  pnp-pose-estimator.cc
aslam_cv2/aslam_cv_matcher/: CMakeLists.txt
aslam_cv2/aslam_cv_matcher/include/aslam/matcher/: gyro-two-frame-matcher.h  match-helpers-inl.h
aslam_cv2/aslam_cv_matcher/src/: gyro-two-frame-matcher.cc  match-helpers.cc
aslam_cv2/aslam_cv_pipeline/: CMakeLists.txt
aslam_cv2/aslam_cv_pipeline/include/aslam/pipeline/: visual-npipeline.h
aslam_cv2/aslam_cv_pipeline/src/: visual-npipeline.cc  visual-pipeline-freak.cc  visual-pipeline-null.cc  visual-pipeline.cc
aslam_cv2/aslam_cv_tracker/: CMakeLists.txt
aslam_cv2/aslam_cv_tracker/include/aslam/tracker/: feature-tracker-gyro.h  track-manager.h  tracking-helpers.h
aslam_cv2/aslam_cv_tracker/src/: feature-tracker-gyro.cc  track-manager.cc  tracking-helpers.cc
backend/map-resources/: CMakeLists.txt
backend/map-resources/src/: resource-map-serialization.cc  resource-map.cc
common/vio-common/: CMakeLists.txt
common/vio-common/include/vio-common/: imu-measurements-buffer.h  rostopic-settings.h  vio-types.h  vio-update.h
common/vio-common/include/vio-common/internal/: imu-measurements-buffer-inl.h
common/vio-common/src/: imu-measurements-buffer.cc  rostopic-settings.cc
console-plugins/mapping-workflows-plugin/: CMakeLists.txt
console-plugins/mapping-workflows-plugin/src/: localization-map-creation.cc  mapping-workflows-plugin.cc
map-structure/sensors/: CMakeLists.txt
map-structure/sensors/include/sensors/: imu.h  sensor-factory.h
map-structure/sensors/src/: imu.cc  sensor-system.cc  sensor.cc
map-structure/vi-map/: CMakeLists.txt
visualization/: CMakeLists.txt
visualization/src/: common-rviz-visualization.cc
(+63 files in other folders)
